automatically backed up by learn

--- a/app/views/attractions/edit.html.erb
+++ b/app/views/attractions/edit.html.erb
@@ -4,5 +4,5 @@
 <%= f.text_field :happiness_rating %>
 <%= f.text_field :nausea_rating %>
 <%= f.text_field :tickets %>
-<%= f.submit "Edit Attraction"%>
+<%= f.submit "Update Attraction"%>
 <%end%>
